# django-hlsfield

./: .gitignore  .pip-audit-ignore.toml  .pre-commit-config.yaml  Document  MANIFEST.in  Makefile  README.md  codecov.yml  coverage.xml  debug_hlsfield.py  pyproject.toml  pytest.ini  pytest.ini.bac  tox.ini  еуые.md
.github/: dependabot.yml
.github/workflows/: ci.yml  cron-health-check.yml  release.yml
examples/: admin.py  apps.py  demo.py  fixtures.py  models.py  tests.py  utils.py
examples/management/commands/: create_test_data.py
examples/migrations/: 0001_initial.py
requirements/: security.txt
scripts/: check_package.sh  publish.sh  setup_pypi.sh  test_install.sh  version_bump.sh
src/hlsfield/: __init__.py  abr.py  apps.py  defaults.py  defaults.py.backup  fields.py  helpers.py  progressive_tasks.py  tasks.py  upload_to.py  urls.py  utils.py  utils.py.backup  views.py  widgets.py
src/hlsfield/templates/hlsfield/players/: hls_player.html
tests/: __init__.py  apps.py  conftest.py  run_tests.py  settings.py  test_basic.py  test_defaults.py  test_fields.py  test_helpers.py  test_smoke.py  test_tasks.py  test_transcoding.py  test_utils.py  urls.py
tests.bac/: conftest.py  test_basic.py  test_fields.py  test_utils.py
tests/tests/: urls.py
